--- a/package.json
+++ b/package.json
@@ -25,18 +25,15 @@
   },
   "dependencies": {
     "highlight.js": "^11.8.0",
-    "markdown-it": "^13.0.1",
-    "markdown-it-mathjax": "^2.0.0",
-    "markdown-it-task-lists": "^2.1.1",
+    "markdown-it": "^14.1.0",
+    "markdown-it-anchor": "^9.0.1",
     "markdown-it-front-matter": "^0.2.3",
-    "markdown-it-textual-uml": "^0.1.3",
-    "mathjax": "^2.7.9",
-    "mathjax-node-page": "^1.4.1",
-    "mermaid": "~10.4.0",
+    "markdown-it-task-lists": "^2.1.1",
+    "markdown-it-textual-uml": "^0.17.1",
+    "mermaid": "^10.9.1",
     "minimist": "^1.2.8",
-    "send": "~0.17.2",
-    "socket.io": "^4.7.2",
-    "markdown-it-anchor": "^8.6.7"
+    "send": "^0.18.0",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "genversion": "^3.1.1"
